tools/tests/ui/fail/l1093.cnf
// Test file for error code: L1093
// Expected error: Underflow Unmatched character in type annotation -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-underflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
